# Santa-RPG-game

./: CMakeLists.txt  README.md
assets/: MavenPro-VariableFont_wght.ttf:Zone.Identifier
src/: santa.c
testgame/: gcc  santa.c  santatest
